move global styles

--- a/packages/core/src/style.css
+++ b/packages/core/src/style.css
@@ -5,3 +5,6 @@ It's here so DEV environment doesn't show a 404
 - In DEV environment, examples/editor loads this stub file, but actual CSS is loaded from CSS modules directly
 - In PROD environment, the actual dist/style.css file is built from the CSS modules
 */
+
+@import url("./editor/Block.css");
+@import url("./editor/editor.css");
